--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,7 @@ prochelp-obj-y := prochelp.o
 ws-server-obj-y := ws-server.o
 fbmuck-obj-y := geometry.o plant.o biome.o noise.o search.o \
 	view.o item.o spell.o drink.o mob.o kill.o geography.o \
-	shop.o
+	shop.o ws.o
 fbmuck-obj-y += array.o boolexp.o create.o db.o db_header.o \
 	game.o hashtab.o help.o \
 	interp.o look.o match.o \
