--- a/client/Makefile
+++ b/client/Makefile
@@ -1,6 +1,5 @@
-include ${METAL_PATH}/mk/wasm.mk
+# include ${METAL_PATH}/mk/wasm.mk
 # LDLIBS = ${PROG_LDLIBS}
-obj-y := view.o tty.o mcp.o main.o
-CFLAGS += -DCLIENT
-exe := client.wasm
-all: client.js
+obj-y := view.o tty.o main.o
+CFLAGS += -DCLIENT -Wno-initializer-overrides
+exe := neverdarkc
