--- a/client/Makefile
+++ b/client/Makefile
@@ -2,4 +2,5 @@
 # LDLIBS = ${PROG_LDLIBS}
 obj-y := view.o tty.o main.o
 CFLAGS += -DCLIENT -Wno-initializer-overrides
+LDFLAGS += -lncurses
 exe := neverdarkc
